--- a/app/src/main/res/layout/fragment_ambulance_break.xml
+++ b/app/src/main/res/layout/fragment_ambulance_break.xml
@@ -69,6 +69,8 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         app:boxCornerRadiusBottomEnd="20dp"
         app:boxCornerRadiusBottomStart="20dp"
+        app:startIconDrawable="@drawable/ic_twotone_access_time_24"
+        app:startIconCheckable="true"
         app:boxCornerRadiusTopEnd="20dp"
         app:boxCornerRadiusTopStart="20dp"
         app:layout_constraintTop_toBottomOf="@+id/time_from_label">
@@ -77,7 +79,7 @@
             android:id="@+id/start_date_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text" />
+            android:inputType="time" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
@@ -102,7 +104,9 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         app:boxCornerRadiusBottomEnd="20dp"
         app:boxCornerRadiusBottomStart="20dp"
+        app:startIconCheckable="true"
         app:boxCornerRadiusTopEnd="20dp"
+        app:startIconDrawable="@drawable/ic_twotone_access_time_24"
         app:boxCornerRadiusTopStart="20dp"
         app:layout_constraintTop_toBottomOf="@+id/time_to_label">
 
@@ -110,7 +114,7 @@
             android:id="@+id/end_date_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text" />
+            android:inputType="time" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <RelativeLayout
