--- a/app/src/main/res/layout/fragment_check_equipment.xml
+++ b/app/src/main/res/layout/fragment_check_equipment.xml
@@ -62,6 +62,18 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
+        <Button
+            android:id="@+id/saveButton"
+            style="@style/Widget.Material3.Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="100dp"
+            android:layout_marginEnd="30dp"
+            android:text="@string/confirm"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/cancelButton" />
+
         <TextView
             android:id="@+id/ambulance_text"
             android:layout_width="wrap_content"
