--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -46,7 +46,6 @@
             android:layout_margin="15dp"
             android:hint="@string/email_hint"
             app:endIconMode="clear_text"
-            app:helperText="*"
             app:helperTextEnabled="true"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             app:boxCornerRadiusBottomEnd="20dp"
@@ -71,7 +70,6 @@
             android:layout_margin="15dp"
             android:hint="Token"
             app:endIconMode="clear_text"
-            app:helperText="*"
             android:visibility="invisible"
             app:helperTextEnabled="true"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -97,7 +95,6 @@
             android:layout_margin="15dp"
             android:hint="@string/new_password"
             app:endIconMode="clear_text"
-            app:helperText="*"
             android:visibility="gone"
             app:helperTextEnabled="true"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -111,17 +108,55 @@
                 android:id="@+id/new_password_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="text"
+                android:inputType="textPassword"
+                android:textColorHint="#616161" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/new_password_field_conf"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:hint="@string/new_password_repeat"
+            app:endIconMode="clear_text"
+            android:visibility="gone"
+            app:helperTextEnabled="true"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            app:boxCornerRadiusBottomEnd="20dp"
+            app:boxCornerRadiusBottomStart="20dp"
+            app:boxCornerRadiusTopEnd="20dp"
+            app:boxCornerRadiusTopStart="20dp"
+            app:layout_constraintTop_toBottomOf="@id/new_password_field">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/new_password_conf_input"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
                 android:textColorHint="#616161" />
 
         </com.google.android.material.textfield.TextInputLayout>
+
+        <TextView
+            android:id="@+id/already_have_a_token"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
+            android:text="@string/already_have_token"
+            android:textSize="16sp"
+            android:layout_marginEnd="10dp"
+            app:layout_constraintBottom_toTopOf="@+id/password_button"
+            app:layout_constraintEnd_toEndOf="@+id/email_field_forg"
+            app:layout_constraintStart_toEndOf="@+id/password_button"
+            app:layout_constraintTop_toBottomOf="@+id/token_field" />
+
 
         <Button
             android:id="@+id/password_button"
             style="@style/Widget.Material3.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="40dp"
             android:text="@string/send"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
             app:layout_constraintEnd_toEndOf="parent"
@@ -139,7 +174,7 @@
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/new_password_field" />
+            app:layout_constraintTop_toBottomOf="@+id/new_password_field_conf" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     </LinearLayout>
