--- a/app/src/main/res/layout/fragment_incident.xml
+++ b/app/src/main/res/layout/fragment_incident.xml
@@ -116,7 +116,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
-        android:clickable="false"
+        android:clickable="true"
         android:editable="false"
         android:hint="@string/incident_address_hint"
         app:boxCornerRadiusBottomEnd="20dp"
@@ -133,7 +133,7 @@
             android:layout_height="wrap_content"
             android:clickable="false"
             android:editable="false"
-            android:inputType="text" />
+            android:inputType="none" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
